--- a/index.html
+++ b/index.html
@@ -897,9 +897,9 @@
     <div class="cockpit">
         <div class="header-container">
             <div class="avatar">
-                <img src="./LedgerLink.webp" alt="Test Image">
+                <img src="./DataX-S.webp" alt="Test Image">
             </div>
-            <h1 class="title">Ledger Link</h1>
+            <h1 class="title">DataX-Sk</h1>
             <div class="radar">
                 <div class="radar-line"></div>
             </div>
@@ -913,7 +913,7 @@
                 <p>> Ready for commands</p>
             </div>
             <div class="screen">
-                <h3>Ledger Link AI Core</h3>
+                <h3>DataX-S AI Core</h3>
                 <p>> Neural network active</p>
                 <p>> Processing capacity: 100%</p>
                 <p>> All systems nominal</p>
