--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
             <div class="avatar">
                 <img src="./DataX-S.webp" alt="Test Image">
             </div>
-            <h1 class="title">DataX-Sk</h1>
+            <h1 class="title">DataX-S</h1>
             <div class="radar">
                 <div class="radar-line"></div>
             </div>
