--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wachin AI - Neural Cockpit Interface</title>
+    <title>DataX-S AI - Neural Cockpit Interface</title>
     <link rel="icon" type="image/png" href="/lisetelogo.png">
     <style>
         :root {
